sintatico.output
   0  $accept : %entry% $end

   1  programa : funcoes comandos

   2  funcoes :
   3          | funcoes funcao

   4  funcao : DEF ID APAR parametros FPAR SETA tipo DPONTOS NOVALINHA INDENTA comandos DEDENTA

   5  tipo : INT_PARSE

   6  parametros :
   7             | parametros parametro

   8  parametro : ID DPONTOS tipo VIRG
   9            | ID DPONTOS tipo

  10  argumentos :
  11             | argumentos argumento

  12  argumento : expressao VIRG
  13            | expressao

  14  cmd_chamada_func : ID APAR argumentos FPAR NOVALINHA
  15                   | expressao ATRIB ID APAR argumentos FPAR NOVALINHA

  16  comando : cmd_atrib
  17          | cmd_if_else
  18          | cmd_if
  19          | cmd_while
  20          | cmd_for
  21          | cmd_range1
  22          | cmd_range2
  23          | cmd_range3
  24          | cmd_atribMAIS
  25          | cmd_atribMENOS
  26          | cmd_atribVEZES
  27          | cmd_atribDIV
  28          | cmd_atribMOD
  29          | cmd_chamada_func
  30          | cmd_retorno
  31          | cmd_print
  32          | cmd_input
  33          | cmd_int_parse

  34  comandos :
  35           | comandos comando

  36  cmd_int_parse : expressao ATRIB INT_PARSE APAR expressao FPAR NOVALINHA

  37  cmd_print : PRINT APAR expressao FPAR NOVALINHA

  38  cmd_input : expressao ATRIB INPUT APAR expressao FPAR NOVALINHA

  39  cmd_retorno : RETURN expressao NOVALINHA

  40  cmd_atrib : expressao ATRIB expressao NOVALINHA

  41  cmd_if : IF expressao DPONTOS NOVALINHA INDENTA comandos DEDENTA

  42  cmd_if_else : IF expressao DPONTOS NOVALINHA INDENTA comandos DEDENTA ELSE DPONTOS NOVALINHA INDENTA comandos DEDENTA

  43  cmd_while : WHILE expressao DPONTOS NOVALINHA INDENTA comandos DEDENTA

  44  cmd_for : FOR expressao IN comando DPONTOS NOVALINHA INDENTA comandos DEDENTA

  45  cmd_range1 : RANGE APAR INT FPAR

  46  cmd_range2 : RANGE APAR INT VIRG INT FPAR

  47  cmd_range3 : RANGE APAR INT VIRG INT VIRG INT FPAR

  48  cmd_atribMAIS : expressao ATRIBMAIS expressao

  49  cmd_atribMENOS : expressao ATRIBMENOS expressao

  50  cmd_atribVEZES : expressao ATRIBVEZES expressao

  51  cmd_atribDIV : expressao ATRIBDIV expressao

  52  cmd_atribMOD : expressao ATRIBMOD expressao

  53  expressao : expressao AND expr1
  54            | expressao OR expr1
  55            | expr1

  56  expr1 : expr1 MAIOR expr2
  57        | expr1 MENOR expr2
  58        | expr1 IGUAL expr2
  59        | expr1 DIFERENTE expr2
  60        | expr1 MAIORIGUAL expr2
  61        | expr1 MENORIGUAL expr2
  62        | expr1 MODULO expr2
  63        | expr2

  64  expr2 : expr2 MAIS expr3
  65        | expr2 MENOS expr3
  66        | expr3

  67  expr3 : expr3 VEZES expr4
  68        | expr3 DIVIDIDO expr4
  69        | expr4

  70  expr4 : NOT expr4
  71        | expr5

  72  expr5 : operando
  73        | variavel
  74        | APAR expressao FPAR

  75  operando : INT
  76           | FLOAT
  77           | STRING
  78           | BOOL

  79  variavel : ID

  80  %entry% : '\001' programa

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . programa  (80)
	funcoes : .  (2)

	.  reduce 2

	programa  goto 3
	funcoes  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' programa .  (80)

	.  reduce 80


state 4
	programa : funcoes . comandos  (1)
	funcoes : funcoes . funcao  (3)
	comandos : .  (34)

	DEF  shift 5
	$end  reduce 34
	INT  reduce 34
	FLOAT  reduce 34
	BOOL  reduce 34
	ID  reduce 34
	STRING  reduce 34
	RETURN  reduce 34
	APAR  reduce 34
	IF  reduce 34
	WHILE  reduce 34
	FOR  reduce 34
	RANGE  reduce 34
	NOT  reduce 34
	PRINT  reduce 34

	comandos  goto 6
	funcao  goto 7


state 5
	funcao : DEF . ID APAR parametros FPAR SETA tipo DPONTOS NOVALINHA INDENTA comandos DEDENTA  (4)

	ID  shift 8
	.  error


state 6
	programa : funcoes comandos .  (1)
	comandos : comandos . comando  (35)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 12
	STRING  shift 13
	RETURN  shift 14
	APAR  shift 15
	IF  shift 16
	WHILE  shift 17
	FOR  shift 18
	RANGE  shift 19
	NOT  shift 20
	PRINT  shift 21
	$end  reduce 1

	expressao  goto 22
	cmd_chamada_func  goto 23
	comando  goto 24
	cmd_atrib  goto 25
	cmd_if_else  goto 26
	cmd_if  goto 27
	cmd_while  goto 28
	cmd_for  goto 29
	cmd_range1  goto 30
	cmd_range2  goto 31
	cmd_range3  goto 32
	cmd_atribMAIS  goto 33
	cmd_atribMENOS  goto 34
	cmd_atribVEZES  goto 35
	cmd_atribDIV  goto 36
	cmd_atribMOD  goto 37
	cmd_retorno  goto 38
	cmd_print  goto 39
	cmd_input  goto 40
	cmd_int_parse  goto 41
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 7
	funcoes : funcoes funcao .  (3)

	.  reduce 3


state 8
	funcao : DEF ID . APAR parametros FPAR SETA tipo DPONTOS NOVALINHA INDENTA comandos DEDENTA  (4)

	APAR  shift 49
	.  error


state 9
	operando : INT .  (75)

	.  reduce 75


state 10
	operando : FLOAT .  (76)

	.  reduce 76


state 11
	operando : BOOL .  (78)

	.  reduce 78


state 12
	cmd_chamada_func : ID . APAR argumentos FPAR NOVALINHA  (14)
	variavel : ID .  (79)

	APAR  shift 50
	AND  reduce 79
	OR  reduce 79
	ATRIB  reduce 79
	MAIS  reduce 79
	MENOS  reduce 79
	VEZES  reduce 79
	DIVIDIDO  reduce 79
	MODULO  reduce 79
	MAIOR  reduce 79
	MENOR  reduce 79
	IGUAL  reduce 79
	DIFERENTE  reduce 79
	MAIORIGUAL  reduce 79
	MENORIGUAL  reduce 79
	ATRIBMAIS  reduce 79
	ATRIBMENOS  reduce 79
	ATRIBVEZES  reduce 79
	ATRIBDIV  reduce 79
	ATRIBMOD  reduce 79


state 13
	operando : STRING .  (77)

	.  reduce 77


state 14
	cmd_retorno : RETURN . expressao NOVALINHA  (39)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 52
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 15
	expr5 : APAR . expressao FPAR  (74)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 53
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 16
	cmd_if : IF . expressao DPONTOS NOVALINHA INDENTA comandos DEDENTA  (41)
	cmd_if_else : IF . expressao DPONTOS NOVALINHA INDENTA comandos DEDENTA ELSE DPONTOS NOVALINHA INDENTA comandos DEDENTA  (42)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 54
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 17
	cmd_while : WHILE . expressao DPONTOS NOVALINHA INDENTA comandos DEDENTA  (43)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 55
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 18
	cmd_for : FOR . expressao IN comando DPONTOS NOVALINHA INDENTA comandos DEDENTA  (44)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 56
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 19
	cmd_range1 : RANGE . APAR INT FPAR  (45)
	cmd_range2 : RANGE . APAR INT VIRG INT FPAR  (46)
	cmd_range3 : RANGE . APAR INT VIRG INT VIRG INT FPAR  (47)

	APAR  shift 57
	.  error


state 20
	expr4 : NOT . expr4  (70)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expr4  goto 58
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 21
	cmd_print : PRINT . APAR expressao FPAR NOVALINHA  (37)

	APAR  shift 59
	.  error


state 22
	cmd_chamada_func : expressao . ATRIB ID APAR argumentos FPAR NOVALINHA  (15)
	cmd_int_parse : expressao . ATRIB INT_PARSE APAR expressao FPAR NOVALINHA  (36)
	cmd_input : expressao . ATRIB INPUT APAR expressao FPAR NOVALINHA  (38)
	cmd_atrib : expressao . ATRIB expressao NOVALINHA  (40)
	cmd_atribMAIS : expressao . ATRIBMAIS expressao  (48)
	cmd_atribMENOS : expressao . ATRIBMENOS expressao  (49)
	cmd_atribVEZES : expressao . ATRIBVEZES expressao  (50)
	cmd_atribDIV : expressao . ATRIBDIV expressao  (51)
	cmd_atribMOD : expressao . ATRIBMOD expressao  (52)
	expressao : expressao . AND expr1  (53)
	expressao : expressao . OR expr1  (54)

	AND  shift 60
	OR  shift 61
	ATRIB  shift 62
	ATRIBMAIS  shift 63
	ATRIBMENOS  shift 64
	ATRIBVEZES  shift 65
	ATRIBDIV  shift 66
	ATRIBMOD  shift 67
	.  error


state 23
	comando : cmd_chamada_func .  (29)

	.  reduce 29


state 24
	comandos : comandos comando .  (35)

	.  reduce 35


state 25
	comando : cmd_atrib .  (16)

	.  reduce 16


state 26
	comando : cmd_if_else .  (17)

	.  reduce 17


state 27
	comando : cmd_if .  (18)

	.  reduce 18


state 28
	comando : cmd_while .  (19)

	.  reduce 19


state 29
	comando : cmd_for .  (20)

	.  reduce 20


state 30
	comando : cmd_range1 .  (21)

	.  reduce 21


state 31
	comando : cmd_range2 .  (22)

	.  reduce 22


state 32
	comando : cmd_range3 .  (23)

	.  reduce 23


state 33
	comando : cmd_atribMAIS .  (24)

	.  reduce 24


state 34
	comando : cmd_atribMENOS .  (25)

	.  reduce 25


state 35
	comando : cmd_atribVEZES .  (26)

	.  reduce 26


state 36
	comando : cmd_atribDIV .  (27)

	.  reduce 27


state 37
	comando : cmd_atribMOD .  (28)

	.  reduce 28


state 38
	comando : cmd_retorno .  (30)

	.  reduce 30


state 39
	comando : cmd_print .  (31)

	.  reduce 31


state 40
	comando : cmd_input .  (32)

	.  reduce 32


state 41
	comando : cmd_int_parse .  (33)

	.  reduce 33


state 42
	expressao : expr1 .  (55)
	expr1 : expr1 . MAIOR expr2  (56)
	expr1 : expr1 . MENOR expr2  (57)
	expr1 : expr1 . IGUAL expr2  (58)
	expr1 : expr1 . DIFERENTE expr2  (59)
	expr1 : expr1 . MAIORIGUAL expr2  (60)
	expr1 : expr1 . MENORIGUAL expr2  (61)
	expr1 : expr1 . MODULO expr2  (62)

	MODULO  shift 68
	MAIOR  shift 69
	MENOR  shift 70
	IGUAL  shift 71
	DIFERENTE  shift 72
	MAIORIGUAL  shift 73
	MENORIGUAL  shift 74
	$end  reduce 55
	INT  reduce 55
	FLOAT  reduce 55
	BOOL  reduce 55
	ID  reduce 55
	STRING  reduce 55
	DEDENTA  reduce 55
	NOVALINHA  reduce 55
	RETURN  reduce 55
	APAR  reduce 55
	FPAR  reduce 55
	IF  reduce 55
	WHILE  reduce 55
	DPONTOS  reduce 55
	FOR  reduce 55
	IN  reduce 55
	RANGE  reduce 55
	VIRG  reduce 55
	NOT  reduce 55
	AND  reduce 55
	OR  reduce 55
	ATRIB  reduce 55
	ATRIBMAIS  reduce 55
	ATRIBMENOS  reduce 55
	ATRIBVEZES  reduce 55
	ATRIBDIV  reduce 55
	ATRIBMOD  reduce 55
	PRINT  reduce 55


state 43
	expr1 : expr2 .  (63)
	expr2 : expr2 . MAIS expr3  (64)
	expr2 : expr2 . MENOS expr3  (65)

	MAIS  shift 75
	MENOS  shift 76
	$end  reduce 63
	INT  reduce 63
	FLOAT  reduce 63
	BOOL  reduce 63
	ID  reduce 63
	STRING  reduce 63
	DEDENTA  reduce 63
	NOVALINHA  reduce 63
	RETURN  reduce 63
	APAR  reduce 63
	FPAR  reduce 63
	IF  reduce 63
	WHILE  reduce 63
	DPONTOS  reduce 63
	FOR  reduce 63
	IN  reduce 63
	RANGE  reduce 63
	VIRG  reduce 63
	NOT  reduce 63
	AND  reduce 63
	OR  reduce 63
	ATRIB  reduce 63
	MODULO  reduce 63
	MAIOR  reduce 63
	MENOR  reduce 63
	IGUAL  reduce 63
	DIFERENTE  reduce 63
	MAIORIGUAL  reduce 63
	MENORIGUAL  reduce 63
	ATRIBMAIS  reduce 63
	ATRIBMENOS  reduce 63
	ATRIBVEZES  reduce 63
	ATRIBDIV  reduce 63
	ATRIBMOD  reduce 63
	PRINT  reduce 63


state 44
	expr2 : expr3 .  (66)
	expr3 : expr3 . VEZES expr4  (67)
	expr3 : expr3 . DIVIDIDO expr4  (68)

	VEZES  shift 77
	DIVIDIDO  shift 78
	$end  reduce 66
	INT  reduce 66
	FLOAT  reduce 66
	BOOL  reduce 66
	ID  reduce 66
	STRING  reduce 66
	DEDENTA  reduce 66
	NOVALINHA  reduce 66
	RETURN  reduce 66
	APAR  reduce 66
	FPAR  reduce 66
	IF  reduce 66
	WHILE  reduce 66
	DPONTOS  reduce 66
	FOR  reduce 66
	IN  reduce 66
	RANGE  reduce 66
	VIRG  reduce 66
	NOT  reduce 66
	AND  reduce 66
	OR  reduce 66
	ATRIB  reduce 66
	MAIS  reduce 66
	MENOS  reduce 66
	MODULO  reduce 66
	MAIOR  reduce 66
	MENOR  reduce 66
	IGUAL  reduce 66
	DIFERENTE  reduce 66
	MAIORIGUAL  reduce 66
	MENORIGUAL  reduce 66
	ATRIBMAIS  reduce 66
	ATRIBMENOS  reduce 66
	ATRIBVEZES  reduce 66
	ATRIBDIV  reduce 66
	ATRIBMOD  reduce 66
	PRINT  reduce 66


state 45
	expr3 : expr4 .  (69)

	.  reduce 69


state 46
	expr4 : expr5 .  (71)

	.  reduce 71


state 47
	expr5 : operando .  (72)

	.  reduce 72


state 48
	expr5 : variavel .  (73)

	.  reduce 73


state 49
	funcao : DEF ID APAR . parametros FPAR SETA tipo DPONTOS NOVALINHA INDENTA comandos DEDENTA  (4)
	parametros : .  (6)

	.  reduce 6

	parametros  goto 79


state 50
	cmd_chamada_func : ID APAR . argumentos FPAR NOVALINHA  (14)
	argumentos : .  (10)

	.  reduce 10

	argumentos  goto 80


state 51
	variavel : ID .  (79)

	.  reduce 79


state 52
	cmd_retorno : RETURN expressao . NOVALINHA  (39)
	expressao : expressao . AND expr1  (53)
	expressao : expressao . OR expr1  (54)

	NOVALINHA  shift 81
	AND  shift 60
	OR  shift 61
	.  error


state 53
	expressao : expressao . AND expr1  (53)
	expressao : expressao . OR expr1  (54)
	expr5 : APAR expressao . FPAR  (74)

	FPAR  shift 82
	AND  shift 60
	OR  shift 61
	.  error


state 54
	cmd_if : IF expressao . DPONTOS NOVALINHA INDENTA comandos DEDENTA  (41)
	cmd_if_else : IF expressao . DPONTOS NOVALINHA INDENTA comandos DEDENTA ELSE DPONTOS NOVALINHA INDENTA comandos DEDENTA  (42)
	expressao : expressao . AND expr1  (53)
	expressao : expressao . OR expr1  (54)

	DPONTOS  shift 83
	AND  shift 60
	OR  shift 61
	.  error


state 55
	cmd_while : WHILE expressao . DPONTOS NOVALINHA INDENTA comandos DEDENTA  (43)
	expressao : expressao . AND expr1  (53)
	expressao : expressao . OR expr1  (54)

	DPONTOS  shift 84
	AND  shift 60
	OR  shift 61
	.  error


state 56
	cmd_for : FOR expressao . IN comando DPONTOS NOVALINHA INDENTA comandos DEDENTA  (44)
	expressao : expressao . AND expr1  (53)
	expressao : expressao . OR expr1  (54)

	IN  shift 85
	AND  shift 60
	OR  shift 61
	.  error


state 57
	cmd_range1 : RANGE APAR . INT FPAR  (45)
	cmd_range2 : RANGE APAR . INT VIRG INT FPAR  (46)
	cmd_range3 : RANGE APAR . INT VIRG INT VIRG INT FPAR  (47)

	INT  shift 86
	.  error


state 58
	expr4 : NOT expr4 .  (70)

	.  reduce 70


state 59
	cmd_print : PRINT APAR . expressao FPAR NOVALINHA  (37)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 87
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 60
	expressao : expressao AND . expr1  (53)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expr1  goto 88
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 61
	expressao : expressao OR . expr1  (54)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expr1  goto 89
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 62
	cmd_chamada_func : expressao ATRIB . ID APAR argumentos FPAR NOVALINHA  (15)
	cmd_int_parse : expressao ATRIB . INT_PARSE APAR expressao FPAR NOVALINHA  (36)
	cmd_input : expressao ATRIB . INPUT APAR expressao FPAR NOVALINHA  (38)
	cmd_atrib : expressao ATRIB . expressao NOVALINHA  (40)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 90
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	INPUT  shift 91
	INT_PARSE  shift 92
	.  error

	expressao  goto 93
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 63
	cmd_atribMAIS : expressao ATRIBMAIS . expressao  (48)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 94
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 64
	cmd_atribMENOS : expressao ATRIBMENOS . expressao  (49)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 95
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 65
	cmd_atribVEZES : expressao ATRIBVEZES . expressao  (50)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error

	expressao  goto 96
	expr1  goto 42
	expr2  goto 43
	expr3  goto 44
	expr4  goto 45
	expr5  goto 46
	operando  goto 47
	variavel  goto 48


state 66
	cmd_atribDIV : expressao ATRIBDIV . expressao  (51)

	INT  shift 9
	FLOAT  shift 10
	BOOL  shift 11
	ID  shift 51
	STRING  shift 13
	APAR  shift 15
	NOT  shift 20
	.  error
